[gd_scene load_steps=5 format=3 uid="uid://bi63a3dx3rqug"]

[ext_resource type="Script" path="res://objectives/objective_trees/objective_editor.gd" id="1_vrivh"]
[ext_resource type="Script" path="res://objectives/objective_trees/reward_selector.gd" id="2_76fne"]
[ext_resource type="PackedScene" uid="uid://7vtyug2h5vr3" path="res://objectives/objective_trees/reward_editor.tscn" id="2_do7ha"]
[ext_resource type="PackedScene" uid="uid://ppaula6nk4fh" path="res://objectives/objective_trees/objective_tree_gate.tscn" id="3_cx1os"]

[node name="ObjectiveEditor" type="GridContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -399.0
offset_top = -226.0
offset_right = 399.0
offset_bottom = 226.0
grow_horizontal = 2
grow_vertical = 2
columns = 2
script = ExtResource("1_vrivh")

[node name="Objective" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ObjectiveName" type="TextEdit" parent="Objective"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "ObjectiveName"

[node name="Description" type="TextEdit" parent="Objective"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "Description"

[node name="FlavorText" type="TextEdit" parent="Objective"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
placeholder_text = "FlavorText
"

[node name="Rewards" type="GridContainer" parent="Objective"]
layout_mode = 2
columns = 3

[node name="Upfront" type="Label" parent="Objective/Rewards"]
unique_name_in_owner = true
layout_mode = 2
text = "Upfront:"

[node name="UpfrontReward" type="OptionButton" parent="Objective/Rewards"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
selected = 0
item_count = 2
popup/item_0/text = "REPUTATION"
popup/item_1/text = "VICTORY"
popup/item_1/id = 1
script = ExtResource("2_76fne")

[node name="UpfrontRewardEditor" parent="Objective/Rewards" instance=ExtResource("2_do7ha")]
layout_mode = 2

[node name="Completion" type="Label" parent="Objective/Rewards"]
unique_name_in_owner = true
layout_mode = 2
text = "Completion:"

[node name="CompletionReward" type="OptionButton" parent="Objective/Rewards"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
selected = 1
item_count = 2
popup/item_0/text = "REPUTATION"
popup/item_1/text = "VICTORY"
popup/item_1/id = 1
script = ExtResource("2_76fne")

[node name="CompletionRewardEditor" parent="Objective/Rewards" instance=ExtResource("2_do7ha")]
layout_mode = 2

[node name="TriggerSelector" type="HBoxContainer" parent="Objective"]
layout_mode = 2

[node name="Label" type="Label" parent="Objective/TriggerSelector"]
layout_mode = 2
text = "Trigger:"

[node name="Trigger" type="OptionButton" parent="Objective/TriggerSelector"]
layout_mode = 2
size_flags_horizontal = 10
selected = 0
item_count = 2
popup/item_0/text = "None"
popup/item_1/text = "Reputation"
popup/item_1/id = 1

[node name="Save" type="Button" parent="Objective"]
layout_mode = 2
text = "Save"

[node name="Rightlink" parent="." instance=ExtResource("3_cx1os")]
layout_mode = 2
size_flags_vertical = 4

[node name="Downlink" parent="." instance=ExtResource("3_cx1os")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="item_selected" from="Objective/Rewards/UpfrontReward" to="Objective/Rewards/UpfrontRewardEditor" method="_on_reward_selected"]
[connection signal="item_selected" from="Objective/Rewards/CompletionReward" to="Objective/Rewards/CompletionRewardEditor" method="_on_reward_selected"]
